# music-catalog

./: .gitignore  README.md  playlists.yaml
cpp/: CMakeLists.txt  build.sh  main.cpp  playlist.cpp  playlist.hpp  song.cpp  song.hpp  yaml_io.cpp  yaml_io.hpp
py/: catalog.py  create_songs_getter.py  generate_playlist.py  rename.py  requirements.txt
typings/icu/: Collator.pyi  Locale.pyi  __init__.pyi
typings/taglib/: lib.py
